// Vitest Snapshot v1

exports[`reorder flat > base 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - text: note2
        type: text
"
`;

exports[`reorder flat > base 2`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - text: note2
        type: text
"
`;

exports[`reorder flat > base 3`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - text: note2
        type: text
"
`;

exports[`reorder flat > note0 down 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - text: note0
        type: text
    - type: listitem
      value: 3
      children:
      - text: note2
        type: text
"
`;

exports[`reorder flat > note0 down 2`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - text: note0
        type: text
    - type: listitem
      value: 3
      children:
      - text: note2
        type: text
"
`;

exports[`reorder flat > note0 down x2 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - text: note2
        type: text
    - type: listitem
      value: 3
      children:
      - text: note0
        type: text
"
`;

exports[`reorder flat > note0 down x2 2`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - text: note2
        type: text
    - type: listitem
      value: 3
      children:
      - text: note0
        type: text
"
`;

exports[`reorder tree > base 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
"
`;

exports[`reorder tree > base 2`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
"
`;

exports[`reorder tree > base 3`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
"
`;

exports[`reorder tree > base 4`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
"
`;

exports[`reorder tree > base 5`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note0
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
    - type: listitem
      value: 2
      children:
      - text: note1
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
"
`;

exports[`reorder tree > note0 down 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
    - type: listitem
      value: 2
      children:
      - text: note0
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
"
`;

exports[`reorder tree > note0 down 2`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children:
      - text: note1
        type: text
    - type: listitem
      value: 2
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 1
            type: text
    - type: listitem
      value: 2
      children:
      - text: note0
        type: text
    - type: listitem
      value: 3
      children:
      - type: list
        children:
        - indent: 1
          type: listitem
          value: 1
          children:
          - text: sub note 0
            type: text
"
`;
